--- a/style.css
+++ b/style.css
@@ -1,3 +1,39 @@
 * {
     font-family: var(--fontStack-monospace, ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace) !important;
 }
+
+body {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.mainAppHeader {
+    background-color: #DCDCDC;
+    width: 100%;
+    height: 5vw;
+    user-select: none;
+}
+
+.mainAppHeaderText {
+    font-size: 4vw;
+}
+
+.button {
+    text-decoration: none;
+    box-sizing: border-box;
+    border: 0.2vw solid #000000;
+    background-color: #FFFFFF;
+    font-size: 3.6vw;
+}
+
+.button:link {
+    color: #000000;
+}
+
+.button:visited {
+    color: #000000;
+}
+
+.button:hover {
+    color: #000000;
+}
