--- a/style.css
+++ b/style.css
@@ -37,3 +37,68 @@ body {
 .button:hover {
     color: #000000;
 }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    font-size: 3vw;
+}
+
+th {
+    border: 1px solid #DDDDDD;
+    text-align: center;
+    padding: 8px;
+}
+
+td {
+    border: 1px solid #DDDDDD;
+    padding: 8px;
+}
+
+.leftAlign {
+    text-align: left;
+}
+
+.centreAlign {
+    text-align: center;
+}
+
+tr:nth-child(even) {
+    background-color: #DDDDDD;
+}
+
+.shoppingListCheckbox {
+    align-items: center;
+    user-select: none;
+    box-sizing: border-box;
+}
+
+.shoppingListCheckbox label {
+    cursor: pointer;
+    display: flex;
+}
+
+.shoppingListCheckbox input {
+    cursor: pointer;
+    opacity: 0;
+    position: absolute;
+    display: none;
+}
+
+.shoppingListCheckbox label::before {
+    content: '';
+    width: 5vw;
+    height: 5vw;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    border: .1vw solid #000000;
+}
+
+.shoppingListCheckbox input:checked+label::before {
+    content: '\002714';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #000000;
+}
