--- a/style.css
+++ b/style.css
@@ -24,16 +24,20 @@ body {
     border: 0.2vw solid #000000;
     background-color: #FFFFFF;
     font-size: 3.6vw;
+    width: 4em;
+    display: inline-block;
+    text-align: center;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    user-select: none;
 }
 
-.button:link {
-    color: #000000;
+.noMargin {
+    margin: 0;
 }
 
-.button:visited {
-    color: #000000;
-}
-
+.button:link,
+.button:visited,
 .button:hover {
     color: #000000;
 }
