--- a/style.css
+++ b/style.css
@@ -115,3 +115,10 @@ tr:nth-child(even) {
     align-items: center;
     color: #000000;
 }
+
+.itemDataInput {
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    font-size: 3vw;
+}
