--- a/style.css
+++ b/style.css
@@ -12,10 +12,21 @@ body {
     width: 100%;
     height: 5vw;
     user-select: none;
+    font-size: 4vw;
 }
 
-.mainAppHeaderText {
-    font-size: 4vw;
+.orderOptions {
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 5vw;
+    user-select: none;
+    font-size: 3vw;
+}
+
+.centredText {
+    display: inline-block;
+    margin-top: calc((5vw - 3vw) / 2);
+    margin-bottom: calc((5vw - 3vw) / 2);
 }
 
 .button {
@@ -108,6 +119,11 @@ tr:nth-child(even) {
     margin-right: auto;
     display: flex;
     border: .1vw solid #000000;
+}
+
+.smaller label::before {
+    width: 4vw;
+    height: 4vw;
 }
 
 .shoppingListCheckbox input:checked+label::before {
